fix: lineheight was too close together on wider screens

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h3 {
 p {
     font-size: min(16px, 3.6vw);
     color: var(--clr-primary-lighter);
-    line-height: min(2rem, 150%);
+    line-height: min(2rem, 3.6vh);
     font-family: "Lato", sans-serif;
 }
 
